Enable Java preview features when executing using mvn